// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconList component renders compact list correctly 1`] = `
<div>
  <ul
    class="IconList-root-43"
  >
    <li
      class="IconList-listItem-44 IconList-isCompact-45"
    >
      <div
        class="IconList-icon-46"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-47"
      >
        <p
          class="MuiTypography-root Typography-root-49 MuiTypography-body1"
          data-testid="typography"
        >
          Title 1
        </p>
      </div>
    </li>
    <li
      class="IconList-listItem-44 IconList-isCompact-45"
    >
      <div
        class="IconList-icon-46"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-47"
      >
        <p
          class="MuiTypography-root Typography-root-49 MuiTypography-body1"
          data-testid="typography"
        >
          Title 2
        </p>
      </div>
    </li>
    <li
      class="IconList-listItem-44 IconList-isCompact-45"
    >
      <div
        class="IconList-icon-46"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-47"
      >
        <p
          class="MuiTypography-root Typography-root-49 MuiTypography-body1"
          data-testid="typography"
        >
          Title 3
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`IconList component renders correctly with custom component 1`] = `
<div>
  <ul
    class="IconList-root-29"
  >
    <li
      class="IconList-listItem-30"
    >
      <div
        class="IconList-icon-32"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-33"
      >
        <span
          class="MuiTypography-root Typography-root-35 MuiTypography-h6"
          data-testid="typography"
        >
          Title
        </span>
        <span
          class="IconList-description-34"
        >
          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum qui quas rem. Animi doloremque veniam numquam at deleniti quas fuga, similique minus magni cum nihil, in sed neque, tempore adipisci.
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`IconList component renders correctly with default icon 1`] = `
<div>
  <ul
    class="IconList-root-1"
  >
    <li
      class="IconList-listItem-2"
    >
      <div
        class="IconList-icon-4"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-5"
      >
        <h6
          class="MuiTypography-root Typography-root-7 MuiTypography-h6"
          data-testid="typography"
        >
          Title
        </h6>
        <span
          class="IconList-description-6"
        >
          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum qui quas rem. Animi doloremque veniam numquam at deleniti quas fuga, similique minus magni cum nihil, in sed neque, tempore adipisci.
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`IconList component renders correctly with multiple children 1`] = `
<div>
  <ul
    class="IconList-root-15"
  >
    <li
      class="IconList-listItem-16"
    >
      <div
        class="IconList-icon-18"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-19"
      >
        <h6
          class="MuiTypography-root Typography-root-21 MuiTypography-h6"
          data-testid="typography"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        <span
          class="IconList-description-20"
        >
          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est esse itaque consequatur laboriosam nisi perspiciatis, excepturi eaque delectus rerum maxime vitae minus error ipsam suscipit totam ab voluptates accusamus quia.
        </span>
      </div>
    </li>
    <li
      class="IconList-listItem-16"
    >
      <div
        class="IconList-icon-18"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-19"
      >
        <h6
          class="MuiTypography-root Typography-root-21 MuiTypography-h6"
          data-testid="typography"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        <span
          class="IconList-description-20"
        >
          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
        </span>
      </div>
    </li>
    <li
      class="IconList-listItem-16"
    >
      <div
        class="IconList-icon-18"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-19"
      >
        <h6
          class="MuiTypography-root Typography-root-21 MuiTypography-h6"
          data-testid="typography"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        <span
          class="IconList-description-20"
        >
          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est esse itaque consequatur laboriosam nisi perspiciatis, excepturi eaque delectus rerum maxime vitae minus error ipsam suscipit totam ab voluptates accusamus quia.
        </span>
      </div>
    </li>
    <li
      class="IconList-listItem-16"
    >
      <div
        class="IconList-icon-18"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
          />
        </svg>
      </div>
      <div
        class="IconList-content-19"
      >
        <h6
          class="MuiTypography-root Typography-root-21 MuiTypography-h6"
          data-testid="typography"
        >
          BMI Group sells to dealers, as well as professional customers.
        </h6>
        <span
          class="IconList-description-20"
        >
          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
        </span>
      </div>
    </li>
  </ul>
</div>
`;
